--- a/servers-config.json
+++ b/servers-config.json
@@ -4,11 +4,11 @@
       "command": "npx",
       "args": ["-y", "dkmaker-mcp-rest-api"],
       "env": {
-        "REST_BASE_URL": "https://site.api.espn.com/apis/site/v2/sports",
+        "REST_BASE_URL": "https://site.api.espn.com",
         "HEADER_Accept": "application/json",
-        "HEADER_User-Agent": "ESPN-Research/1.0",
+        "HEADER_User-Agent": "SportsChat/1.0 (+contact@example.com)",
         "REST_ENABLE_SSL_VERIFY": "true",
-        "REST_RESPONSE_SIZE_LIMIT": "20000"
+        "REST_RESPONSE_SIZE_LIMIT": "100000"
       }
     }
   }
