--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 requests>=2.28.0
 schedule>=1.2.0
-httpx
-python-dotenv
+httpx>=0.25.0
+python-dotenv>=1.0.0
 mcp
 fastmcp
-pydantic
+pydantic>=2.5.0
 pytz>=2023.3
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
