--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,15 @@
 # Web framework and server
 fastapi>=0.104.1
 uvicorn[standard]>=0.24.0
+starlette>=0.27.0
 pydantic>=2.5.0
 python-multipart>=0.0.6
 
 # HTTP client for API calls
 httpx>=0.25.0
+
+# Odds package for v2 MCP
+the-odds>=1.0.2
 
 # Environment management
 python-dotenv>=1.0.0
