--- a/mcp_leagues/chat/railway.toml
+++ b/mcp_leagues/chat/railway.toml
@@ -1,5 +1,6 @@
 [build]
-command = "pip install -r requirements.txt"
+builder = "nixpacks"
+buildCommand = "pip install -r requirements.txt"
 
 [deploy]
 startCommand = "python discord_mcp_server.py"
