Create clean Discord MCP directory without Node.js files

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,11 @@ setup_http_server.py
 # Ignore problematic nested git repos
 mcp_leagues/chat/chat_mcp/
 mcp_leagues/chat/discordmcp/
+
+# Ignore Node.js files in Discord MCP (Python-only deployment)
+mcp_leagues/chat/node_modules/
+mcp_leagues/chat/package.json
+mcp_leagues/chat/package-lock.json
+mcp_leagues/chat/tsconfig.json
+mcp_leagues/chat/src/
+mcp_leagues/chat/build/
