--- a/mcp_leagues/discord_clean/nixpacks.toml
+++ b/mcp_leagues/discord_clean/nixpacks.toml
@@ -1,14 +1,13 @@
-[providers]
-python = "3.11"
+providers = ["python"]
+
+[variables]
+PYTHON_VERSION = "3.11"
 
 [phases.setup]
 nixPkgs = ["python311", "python311Packages.pip"]
 
 [phases.install]
 cmds = ["pip install -r requirements.txt"]
-
-[phases.build]
-cmds = ["echo 'Build complete'"]
 
 [start]
 cmd = "python discord_mcp_server.py"
