--- a/mcp_leagues/soccer/requirements.txt
+++ b/mcp_leagues/soccer/requirements.txt
@@ -1,4 +1,2 @@
-# Requirements for Soccer MCP using Football-Data.org API
-uvicorn[standard]>=0.24.0
-starlette>=0.27.0
-httpx>=0.25.0
+httpx>=0.28.1
+mcp[cli]>=1.6.0
