--- a/mcp_leagues/discord_bot/railway.toml
+++ b/mcp_leagues/discord_bot/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "pip install -r discord/requirements.txt"
+buildCommand = "pip install -r requirements.txt"
 
 [deploy]
-startCommand = "cd discord && python bot_structure.py"
+startCommand = "python sports_discord_bot.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
