--- a/mcp_leagues/discord_bot/railway.toml
+++ b/mcp_leagues/discord_bot/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "pip install -r requirements.txt"
+buildCommand = "pip install -r requirements.txt && python -m playwright install chromium"
 
 [deploy]
 startCommand = "python sports_discord_bot.py"
